# diary

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain  rustfmt.toml
src/: env.rs  lib.rs  main.rs  utils.rs
src/cmds/: add.rs
src/utils/: diary_repository.rs  source_repository.rs
tests/: acc.rs
tests/acc/add-complementary-video-1/expected/: stdout
tests/acc/add-complementary-video-2/expected/: stdout
tests/acc/add-dry-run/expected/: stdout
tests/acc/add-dry-run/given/: cmd
tests/acc/add-filter-from-to/expected/: stdout
tests/acc/add-filter-from-to/given/: cmd
tests/acc/add-filter-from-to/given/source/: 2018-01-03.org
tests/acc/add-filter-from/expected/: stdout
tests/acc/add-filter-from/given/: cmd
tests/acc/add-filter-on/expected/: stdout
tests/acc/add-filter-on/given/: cmd
tests/acc/add-remove-and-dry-run/expected/: stdout
tests/acc/add-remove-and-dry-run/given/: cmd
tests/acc/add-remove/expected/: stdout
tests/acc/add-screenshot/expected/: stdout
tests/acc/add-smoke/expected/: stdout
tests/acc/add-smoke/given/: cmd
tests/acc/add-smoke/given/diary/2018/01/02/: index.org
tests/acc/add-verbose/expected/: stdout
tests/acc/add-verbose/given/: cmd
tests/acc/add-verbose/given/source/: 2018-01-01.org
tests/acc/add-video/expected/: stdout
tests/acc/add-where-date-is-in-file-name/expected/: stdout
tests/acc/add-where-date-is-in-file-name/given/: cmd
